--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "fastify": "5.3.3"
+    "dotenv": "16.5.0",
+    "fastify": "5.3.3",
+    "zod": "3.25.51"
   },
   "devDependencies": {
     "@types/node": "22.15.29",
