--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "zod": "3.25.51"
   },
   "devDependencies": {
+    "@eslint/js": "9.28.0",
     "@types/node": "22.15.29",
+    "eslint": "9.28.0",
+    "globals": "16.2.0",
     "tsup": "8.5.0",
     "tsx": "4.19.4",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.33.1"
   }
 }
