--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "services:up": "docker compose -f src/infra/compose.yaml up -d",
+    "services:stop": "docker compose -f src/infra/compose.yaml stop",
+    "services:down": "docker compose -f src/infra/compose.yaml down",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "6.9.0",
     "dotenv": "16.5.0",
     "fastify": "5.3.3",
     "zod": "3.25.51"
@@ -22,6 +29,7 @@
     "@types/node": "22.15.29",
     "eslint": "9.28.0",
     "globals": "16.2.0",
+    "prisma": "6.9.0",
     "tsup": "8.5.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
