--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "services:down": "docker compose -f src/infra/compose.yaml down",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "test": "vitest --run",
+    "test:watch": "vitest --reporter verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@prisma/client": "6.9.0",
     "bcryptjs": "3.0.2",
@@ -34,6 +36,8 @@
     "tsup": "8.5.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.33.1"
+    "typescript-eslint": "8.33.1",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.2.2"
   }
 }
