feat: add jwt-secret to env

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 NODE_ENV=development
 
-POSTGRES_USER=
-POSTGRES_DB=
-POSTGRES_PASSWORD=
+POSTGRES_USER=local_user
+POSTGRES_DB=local_db
+POSTGRES_PASSWORD=local_password
 
-DATABASE_URL=
+DATABASE_URL=postgresql://local_user:local_password@localhost:5433/local_db
+
+JWT_SECRET=jwt_secret
