--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "test": "vitest --run",
-    "test:watch": "vitest --reporter verbose"
+    "test:unit": "vitest --run --project unit-tests",
+    "test:e2e": "vitest --run --project e2e-tests",
+    "test:watch:unit": "vitest --reporter verbose --project unit-tests",
+    "test:watch:e2e": "vitest --reporter verbose --project e2e-tests"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
+    "@fastify/jwt": "9.1.0",
     "@prisma/client": "6.9.0",
     "bcryptjs": "3.0.2",
     "dotenv": "16.5.0",
@@ -30,9 +34,11 @@
   "devDependencies": {
     "@eslint/js": "9.28.0",
     "@types/node": "22.15.29",
+    "@types/supertest": "6.0.3",
     "eslint": "9.28.0",
     "globals": "16.2.0",
     "prisma": "6.9.0",
+    "supertest": "7.1.1",
     "tsup": "8.5.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
