--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "services:stop": "docker compose -f src/infra/compose.yaml stop",
     "services:down": "docker compose -f src/infra/compose.yaml down",
     "prisma:generate": "prisma generate",
+    "prisma:generate:sql": "prisma generate --sql",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "test:unit": "vitest --run --project unit-tests",
